; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shader.c_assign_program_attrib.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shader.c_assign_program_attrib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gs_program = type { i32, i32 }
%struct.shader_attrib = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"glGetAttribLocation\00", align 1
@LOG_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [51 x i8] c"glGetAttribLocation: Could not find attribute '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gs_program*, %struct.shader_attrib*)* @assign_program_attrib to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @assign_program_attrib(%struct.gs_program* %0, %struct.shader_attrib* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.gs_program*, align 8
  %5 = alloca %struct.shader_attrib*, align 8
  %6 = alloca i32, align 4
  store %struct.gs_program* %0, %struct.gs_program** %4, align 8
  store %struct.shader_attrib* %1, %struct.shader_attrib** %5, align 8
  %7 = load %struct.gs_program*, %struct.gs_program** %4, align 8
  %8 = getelementptr inbounds %struct.gs_program, %struct.gs_program* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.shader_attrib*, %struct.shader_attrib** %5, align 8
  %11 = getelementptr inbounds %struct.shader_attrib, %struct.shader_attrib* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @glGetAttribLocation(i32 %9, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = call i32 @gl_success(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %31

17:                                               ; preds = %2
  %18 = load i32, i32* %6, align 4
  %19 = icmp eq i32 %18, -1
  br i1 %19, label %20, label %26

20:                                               ; preds = %17
  %21 = load i32, i32* @LOG_ERROR, align 4
  %22 = load %struct.shader_attrib*, %struct.shader_attrib** %5, align 8
  %23 = getelementptr inbounds %struct.shader_attrib, %struct.shader_attrib* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @blog(i32 %21, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0), i32 %24)
  store i32 0, i32* %3, align 4
  br label %31

26:                                               ; preds = %17
  %27 = load %struct.gs_program*, %struct.gs_program** %4, align 8
  %28 = getelementptr inbounds %struct.gs_program, %struct.gs_program* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @da_push_back(i32 %29, i32* %6)
  store i32 1, i32* %3, align 4
  br label %31

31:                                               ; preds = %26, %20, %16
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @glGetAttribLocation(i32, i32) #1

declare dso_local i32 @gl_success(i8*) #1

declare dso_local i32 @blog(i32, i8*, i32) #1

declare dso_local i32 @da_push_back(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
